# lwocrypt-provider

./: .gitignore  ALGORITHMS.md  CMakeLists.txt  LICENSE.txt  README.md  RELEASE.md
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: linux.yml  windows.yml
lwocrypt-template/: generate.py  generate.sh  generate.yml  generate.yml-0.7.2  generate_oid_nid_table.py  generatehelpers.py
lwocrypt-template/ALGORITHMS.md/: encodings.fragment  ids.fragment  oids.fragment
lwocrypt-template/lwocryptprov/lwocrypt_decode_der2key.c/: decoder_make.fragment
lwocrypt-template/lwocryptprov/lwocrypt_encode_key2any.c/: encoder_make.fragment
lwocrypt-template/lwocryptprov/lwocrypt_prov.h/: alg_functions.fragment
lwocrypt-template/lwocryptprov/lwocryptdecoders.inc/: make.fragment
lwocrypt-template/lwocryptprov/lwocryptprov.c/: assign_sig_oids.fragment  kem_functions.fragment  keymgmt_functions.fragment
lwocrypt-template/lwocryptprov/lwocryptprov_capabilities.c/: codepoint_patching.fragment  group_names.fragment  sigalg_names.fragment
lwocrypt-template/oldalgdocs/kem/: sike.yml
lwocrypt-template/oqsprov/oqs_kmgmt.c/: keymgmt_constructors.fragment  keymgmt_functions.fragment
lwocrypt-template/oqsprov/oqs_prov.h/: endecoder_functions.fragment
lwocrypt-template/oqsprov/oqsencoders.inc/: make.fragment
lwocrypt-template/oqsprov/oqsprov.c/: encoding_patching.fragment  oid_patching.fragment  sig_functions.fragment
lwocrypt-template/oqsprov/oqsprov_keys.c/: oqsnames.fragment
lwocryptprov/: CMakeLists.txt  lwocrypt_endecoder_local.h  lwocrypt_sig.c  lwocryptprov_bio.c  lwocryptprov_capabilities.c  oqs_decode_der2key.c  oqs_encode_key2any.c  oqs_endecoder_common.c  oqs_kem.c  oqs_kmgmt.c  oqs_prov.h  oqsdecoders.inc  oqsencoders.inc  oqsprov.c  oqsprov_keys.c
scripts/: fullbuild.sh  lwocrypt-openssl-certgen.sh  lwocrypt-openssl-certverify.sh  lwocrypt-openssl-cmssign.sh  lwocrypt-openssl-cmsverify.sh  lwocryptprovider-ca.sh  lwocryptprovider-certverify.sh  oqsprovider-certgen.sh  oqsprovider-cmssign.sh  oqsprovider-cmsverify.sh  revertmain.sh  runtests.sh  runtests_encodings.sh
test/: CMakeLists.txt  README.md  lwocrypt.cnf  lwocrypt_test_groups.c  lwocrypt_test_tlssig.c  openssl-ca.cnf  oqs_test_endecode.c  oqs_test_kems.c  oqs_test_signatures.c  test_common.c  test_common.h
